#30 - Restructure template design of the person profile page; add referent profile
The restructuring was necessary because with lazy-loading the validation states of forms could not be retained and passed through the various controllers easily (i.e. without hacking). The new layout basically placed all tabs in separate templates and used full-fledged controllers to control them. So instead of always loading `/persons/$id/` separate pages like `/persons/$id/activist-referent/` are displayed.
This is achived by using separate controllers for each page which put the necessary data into the model. The `personDetails.html` then dispatches on the template that should actually be used and includes the corresponding fragment. This keeps both the controllers small as well as the templates clear. On the downside some "artificial" controllers have to be introduced to take care of the rendering of each tab (e.g. the `ActivistReferentController` for the activist/referent profile tab).

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -246,6 +246,18 @@ fieldset.inline-options label {
   margin-top: 15px;
 }
 
+.margin-right-sm {
+  margin-right: 3px;
+}
+
+.margin-right {
+  margin-right: 8px;
+}
+
+.margin-right-lg {
+  margin-right: 15px;
+}
+
 .margin-btm-sm {
   margin-bottom: 3px;
 }
@@ -399,6 +411,20 @@ fieldset.inline-options label {
 
 .list-group-minimalistic .list-group-item:nth-of-type(2n) {
   background-color: #f9f9f9;
+}
+
+.modal.modal-tabbed .modal-dialog .modal-content .modal-header {
+  padding-bottom: 0;
+  border-bottom: 0;
+}
+
+.modal.modal-tabbed .modal-dialog .modal-content .modal-body {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.block {
+  display: block;
 }
 
 .inline {
