--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -195,6 +195,10 @@ a {
   vertical-align: baseline;
 }
 
+.action-cursor {
+  cursor: pointer;
+}
+
 .display-category {
   padding: 15px;
   margin-bottom: 15px;
