--- a/src/main/resources/templates/persons/personDetailsOverview.html
+++ b/src/main/resources/templates/persons/personDetailsOverview.html
@@ -145,9 +145,7 @@
                           <div class="checkbox">
                             <label>
                               <input type="checkbox" id="participant" th:field="*{participant}"/>
-                              die
-                              Person nimmt an
-                              Veranstaltungen teil
+                              die Person nimmt an Veranstaltungen teil
                             </label>
                           </div>
                         </div>
